# botman2

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
app/: bot.py  db.py  main.py  queries.py  settings.py
tasks/: celery_app.py  reports.py  scheduler.py
